--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://taylorsoftware.github.io/taylorsoftware
-baseurl: /taylorsoftware.github.io/taylorsoftware/
+url: http://taylorsoftware.github.io
+baseurl: /taylorsoftware/
 
 
 # Site settings
