--- a/_config.yml
+++ b/_config.yml
@@ -57,13 +57,17 @@ social:
 #    url: http://stackoverflow.com/questions/tagged/jekyll
 #  - title: bitbucket
 #    url: http://bitbucket.org/jekyll
-#  - title: github
-#    url: http://github.com/jekyll
+  - title: github
+    url: http://github.com/paultaylor-vox
+  - title: linkedin
+    url: http://www.linkedin.com/profile/view?id=70855470&trk=hp-identity-name
+
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: PO Box 8751
+  - line: Edenglen, Johannesburg
+  - line: 1615
 
 # Build settings
 markdown: kramdown
