--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ social:
 #  - title: bitbucket
 #    url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/paultaylor-vox
+    url: http://github.com/paulietaylor
   - title: linkedin
     url: http://www.linkedin.com/profile/view?id=70855470&trk=hp-identity-name
 
