--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ social:
   - title: github
     url: http://github.com/ps-taylor
   - title: linkedin
-    url: http://www.linkedin.com/profile/view?id=70855470&trk=hp-identity-name
+    url: https://www.linkedin.com/in/paul-taylor-3a68901b
 
 
 # Postal address (add as many lines as necessary)
